[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[project]
name = "pinexq-procon-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
parquet = [
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
]

[tool.uv.build-backend]
module-name = "pinexq.procon.io"
