[build-system]
requires = ["uv_build>=0.10.3,<0.11.0"]
build-backend = "uv_build"

[project]
name = "pinexq-procon-io"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
matplotlib = [
    "matplotlib>=3.10.8",
]
parquet = [
    "pandas>=3.0.0",
    "pyarrow>=23.0.1",
]
plotly = [
    "scipy>=1.15.3",
]
polars = [
    "polars>=1.38.1",
]

[tool.uv.build-backend]
module-name = "pinexq.procon.io"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pandas-stubs>=3.0.0.260204",
    "pytest>=8.0",
]
